k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: incidentguard
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: incidentguard
spec:
  selector:
    app.kubernetes.io/name: frontend-pod
  ports:
    - name: frontend
      port: 80
      targetPort: http
