k8s/frontend/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-allow-ingress
  namespace: incidentguard
  labels:
    app.kubernetes.io/part-of: incidentguard
spec:
  podSelector:
    matchLabels:
       app.kubernetes.io/name: frontend-pod      # a quem esta política se aplica
  policyTypes: ["Ingress"]
  ingress:
    - from:
      - namespaceSelector:
         matchLabels:                # Frontend é chamado pelos pods NGINX 
          kubernetes.io/metadata.name: ingress-nginx
      ports:
      - protocol: TCP
        port: 8080
